<resources>
    <string name="app_name">Student Tracker</string>
    <string name="nav_homeTitle">Home</string>
    <string name="nav_termTitle">Terms</string>
    <string name="nav_courseTitle">Courses</string>
    <string name="nav_assessmentTitle">Assessments</string>
    <string name="nav_mentorTitle">Mentors</string>
    <string name="nav_userName">John Doe</string>
    <string name="nav_userProgram">User\'s Degree Program</string>
    <string name="action_add_sampleData">Add Sample Dataset</string>
    <string name="action_deleteAll">Reset App (Delete All)</string>
    <string name="action_about">About App</string>
    <string name="action_help">Help</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="termDetailTitleLabel">Title</string>
    <string name="termDetailTitle">e.x. Winter Term</string>
    <string name="untilForDates">until</string>
    <string name="termDetailDatesLabel">Term Dates</string>
    <string name="termDetailStartDateDummy">1/1/2023</string>
    <string name="termDetailEndDateDummy">12/12/2023</string>
    <string name="termCoursesListLabel">Courses In Term</string>
    <string name="dailyQoute">Lorem Ipsum, this would be a daily inspirational quote.</string>
    <string name="dailyqouteAuthor">Author Name</string>
    <string name="dummyDateRange">1/1/2023 until 12/12/2023</string>
    <string name="courseDetailTitle">e.x. C196 Mobile Application Development</string>
    <string name="CourseDetailTitleLabel">Course</string>
    <string name="statusTextLabel">Status</string>
    <string name="statusTextDummy">In Progress</string>
    <string name="courseDetailDatesLabel">Duration</string>
    <string name="courseDetailNotesLabel">Notes</string>
    <string name="enterNotesPromptText">Enter Notes Here...</string>
    <string name="NotesShareLabel">Share Notes</string>
    <string name="edit_titleHint">Edit Title</string>
    <string name="remindersLabel">Reminders</string>
    <string name="courseStartText">Start Date</string>
    <string name="courseEndText">End Date</string>
    <string name="assessmentTitleLabel">Assessment</string>
    <string name="dummyAssessmentName">Ex. Project + Cert</string>
    <string name="assessmentTypeLabel">Type</string>
    <string name="dummyAssessmentType">Performance Assessment</string>
    <string name="assessmentDueDateLabel">Goal Date</string>
    <string name="remind_me">Remind Me</string>
    <string name="NameLabel">Name</string>
    <string name="dummyMentorName">Da Mentor</string>
    <string name="EmailLabel">Email</string>
    <string name="dummyMentorEmail">damentor@email.edu</string>
    <string name="PhoneLabel">Phone\n</string>
    <string name="dummyMentorPhoneNumber">111-222-3333</string>
    <string name="dummyAssessmentTypeShortCode">PA</string>
    <string name="term_details">Term Details</string>
    <string name="open_navigation">Open Navigation</string>
    <string name="close_navigation">Close Navigation</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="channel_name">EXAMPLE</string>
    <string name="channel_description">Notification Channel for Sample Code</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="course_details" />
    <string name="courseDetailDescriptionLabel">Description</string>
    <string name="dummyCourseDescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="enter_description">Enter Description</string>
    <string name="helpFAQTitle">Application Help</string>
    <string name="new_term_title">New Term</string>
    <string name="edit_term_title">Edit Term</string>
    <string name="no_course_assigned">No course assigned</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="new_assessment">New Assessment</string>
    <string name="notify">Notify</string>
    <string name="date_format_dummy">MM/DD/YYYY</string>
    <string name="assessmentStartDateLabel">Start Date</string>
</resources>