<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Views.MainActivity">
    <item
        android:id="@+id/action_add_sampleDataSet"
        android:title="@string/action_add_sampleData"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deleteAll"
        android:title="@string/action_deleteAll"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>