<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="1"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_question_mark"
        android:orderInCategory="3"
        android:title="@string/action_help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notify"
        android:icon="@drawable/ic_action_notify"
        android:orderInCategory="4"
        android:title="@string/notify"
        app:showAsAction="always" />
</menu>