<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Views.TermDetailsActivity">

    <TextView
        android:id="@+id/textTermTitleLabel"
        style="@style/FieldNameText"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/termDetailTitleLabel"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/termDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="80dp"
        android:autofillHints="name"
        android:ems="10"
        android:text="@string/termDetailTitle"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/termDetailDatesLabel"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        style="@style/FieldNameText"
        android:text="@string/termDetailDatesLabel"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


    <TextView
        android:id="@+id/termDetailStartDate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="140dp"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:text="@string/termDetailStartDateDummy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/termDetailTextUntil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="145dp"
        android:text="@string/untilForDates"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/termDetailStartDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/termDetailEndDate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="140dp"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:text="@string/termDetailEndDateDummy"
        app:layout_constraintStart_toEndOf="@id/termDetailTextUntil"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/termDetailEndDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorNeutralDark"/>

    <TextView
        android:id="@+id/textTermCoursesListLabel"
        style="@style/FieldNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/termCoursesListLabel"
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/termCoursesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="240dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/textTermCoursesListLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddCourseToTermButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:tooltipText="Add a Course to this Term"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_action_add"
        android:importantForAccessibility="no" />

</androidx.constraintlayout.widget.ConstraintLayout>